Fixing Navbar overflow:hidden bug

--- a/PersonalWebsite/PersonalWebsite/CSS/jyStyles.css
+++ b/PersonalWebsite/PersonalWebsite/CSS/jyStyles.css
@@ -253,7 +253,7 @@ a:hover {
     opacity: 1;
     padding: 0px;
     height: 68px !important;
-    overflow: visible;
+    overflow: visible !important;
 }
 
 #navlist li a.sm {
